2002-12-02  Andras Varga

	* cmessage.cc: par() methods to throw cException when object cannot
	be cast to cPar using dynamic_cast<cPar *>().

2002-11-14  Andras Varga

	* cmodule.cc: cSimpleModule::end() and deleteModule() are now driven
	by exceptions. This also means that activity() and handleMessage()
	execution immediately ends after the end() or deleteModule() call.
	(This fixes the bug that in previous versions, handleMessage() run
	through even after these calls.)

	* csimul.cc: cSimulation::doOneStep() restructured

2002-10-27  Andras Varga

	* object.cc: className() implemented using typeid (C++ RTTI)

	* chead.cc, ctypes.cc: inspectorfactory stuff moved to Tkenv from here

	* CRASH on Cygwin (gcc 2.95.3-5): if we transfer out (ie. by calling
	transferToMain()) from a try{..} block inside a coroutine, the
	program will crash during exiting (ie sometime on leaving main()).
	This is kind of bad, because that's the way activity() can be handled
	inside the simulation kernel, in cSimpleModule::activate()...

	To produce the bug, link with Tkenv any simulation that uses
	activity() (I tried with Fifo1 and Token). Do one (or more) events
	in Tkenv, then exit. Tkenv will crash right after printing
	"End run of OMNeT++". Then try the same without doing an event,
	or with pure handleMessage() simulation (ie Fifo2): neither will crash.
	Strangely enough, there is also no immediate crash if you do
	"Rebuild network" in Tkenv several times, crash is always delayed
	until program exit.

	To test it's really caused by the try block, modify cSimpleModule::
	activate(void *p), around cmodule.cc#575:
	    try
	    {
	        smod->activity();
	Insert simulation.transferToMain() just before the try block and
	try to reproduce the bug (one step in Tkenv, then exit). Simulation
	won't work, but no crash. Then move simulation.transferToMain()
	just inside the try block: simulation will (not) work same way
	as before, but crashes on exit.
